--- a/app/css/main.css
+++ b/app/css/main.css
@@ -2,43 +2,42 @@
 		DEFAULT STYLES
 /////////////////////////////*/
 
-a{
+a {
 	color: #515862;
 	text-decoration: none;
 }
 
-img{max-width: 100%;}
+img {
+	max-width: 100%;
+}
 
-ul{list-style-type: none;}
+ul {
+	list-style-type: none;
+}
 
-*{
+* {
 	margin: 0;
 	padding: 0;
 }
+
 *::-webkit-input-placeholder {
 	color: #666;
 	opacity: 1;
 }
+
 *:-moz-placeholder {
 	color: #666;
 	opacity: 1;
 }
+
 *::-moz-placeholder {
 	color: #666;
 	opacity: 1;
 }
+
 *:-ms-input-placeholder {
 	color: #666;
 	opacity: 1;
-}
-
-body input:focus:required:invalid,
-body textarea:focus:required:invalid {
-	
-}
-body input:required:valid,
-body textarea:required:valid {
-	
 }
 
 body {
@@ -51,48 +50,49 @@ body {
 	overflow-x: hidden;
 	color: #515862;
 }
-.hidden {
-	display: none;
-}
-/*Если нет сетки BOOTSTRAP,если есть то закомментировать*/
-/*.container{
-	width: 960px;
-	max-width: 100%;
-	margin: 0 auto;
-}
 
-.left{float: left;}
-.right{float: right;}
-.clearfix::after{
-	content: "" ;
-	display: block;
-	clear: both;
-}
-
-.relative{position: relative;}
-
-.text-left{text-align: left;}
-.text-right{text-align: right;}
-.text-center{text-align: center;}
-*/
-
-.wall_wrap{
+.wall_wrap {
 	margin: 50px auto;
 	width: 900px;
 	height: 800px;
-	border: 1px solid #000;
+	border: 40px solid pink;
 	position: relative;
 }
 
-.sneake_head{
+.sneake_head {
 	width: 20px;
 	height: 20px;
 	background: #000;
 }
 
-.snake_wrap{
+.snake_wrap {
 	position: absolute;
 	left: 0;
 	top: 0;
 	transition: all .2s linear;
+}
+
+.btn_snake {
+	display: block;
+	margin: 50px auto;
+	background: rgb(241, 239, 210);
+	border: none;
+	padding: 10px;
+	font-size: 35px;
+	border-radius: 15px;
+	box-shadow: 2px 2px 2px 2px rgb(96, 96, 96);
+	cursor: pointer;
+	position: relative;
+	transition: all .2s;
+	outline: none;
+}
+
+.btn_snake:hover {
+	box-shadow: 3px 3px 3px 3px rgb(96, 96, 96);
+}
+
+.btn_snake:active {
+	top: 1px;
+	right: -1px;
+	box-shadow: 1px 1px 1px 1px rgb(96, 96, 96);
 }
